<resources>
    <string name="app_name">Life Bank</string>
    <string name="title_activity_login">Sign in</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="achiev">Achievements</string>

    <!-- Strings related to login -->
    <string name="signup">Register</string>
    <string name="prompt_email">Email</string>
    <string name="register">Create a new account</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="reset">Reset</string>
    <string name="displayName">Full Name</string>
    <string name="mobile">Mobile No</string>
    <string name="userAddress">Address</string>
    <string name="nearH">Find nearest Hospitals</string>
    <string name="fndBlood">Find Blood Donor</string>
    <string name="lgout">Log out</string>
    <string name="devinfo">About us</string>
    <string name="bloodinfo">Blood Info</string>


    <string-array name="division_list">
        <item>Naroda</item>
        <item>Nikol</item>
        <item>Bapunagar</item>
        <item>Krishnanagar</item>
        <item>Meghaninagar</item>
        <item>saijpur</item>
        <item>Vastral</item>
        <item>Odhav</item>
        <item>Gota</item>
        <item>Chandlodia</item>
        <item>Kali</item>
        <item>Chandkheda Motera</item>
        <item>Sabarmati</item>
        <item>Ranip</item>
        <item>Ghatlodia</item>
        <item>Thaltej</item>
        <item>Naranpura</item>
        <item>Nava Wadaj</item>
        <item>Old Wadaj</item>
        <item>Sardarnagar</item>
        <item>Nobalnagar</item>
        <item>Kubernagar</item>
        <item>Asarwa</item>
        <item>Girdharnagar</item>
        <item>Madhupura</item>
        <item>Dudheshwar</item>
        <item>S.P Stadium</item>
        <item>Bodakdev</item>
        <item>Sarkhej</item>
        <item>Jodhpur</item>
        <item>Ambawadi</item>
        <item>Navrangpura</item>
        <item>Shahpur</item>
        <item>Dariyapur</item>
        <item>Naroda Road</item>
        <item>India Colony</item>
        <item>Thakkarbapanagar</item>
        <item>Viratnagar</item>
        <item>Saraspur</item>
        <item>Kalupur</item>
        <item>Raikhad</item>
        <item>Paldi</item>
        <item>Vasna</item>
        <item>Vejalpur</item>
        <item>Behrampura</item>
        <item>Jamalpur</item>
        <item>Khadia</item>
        <item>Kankaria</item>
        <item>Gomtipur</item>
        <item>Rakhial</item>
        <item>Rajpur</item>
        <item>Arbudanagar</item>
        <item>Indrapuri</item>
        <item>Mahavirnagar</item>
        <item>Bhaipur Hatkeshwar</item>
        <item>Amraiwadi</item>
        <item>Khokhra</item>
        <item>Maininagar</item>
        <item>Danilimda</item>
        <item>Lambha</item>
        <item>Isanpur</item>
        <item>Ghodasar</item>
        <item>Vatva</item>
        <item>Ramol Hathijan</item>

    </string-array>

    <array name="gender">
        <item>Male</item>
        <item>Female</item>
    </array>

    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string name="eligibility_">Eligibility Requirements</string>
    <string name="female_">If you are female, you must:\n Be healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 5 inch\nWeigh at least 150 lbs.</string>
    <string name="male_">If you are male, you must:\nBe healthy and feeling well\nBe at least 17 years old in most states\nBe at least 5 ft 1 inch \nWeigh at least 130 lbs.\n</string>
    <string name="info_">Giving blood saves lives. The blood you give is a lifeline in an emergency and for people who need long-term treatments. Many people would not be alive today if donors had not generously given their blood. \n\nWhy we need you to give blood?\n\n We need over 6000 blood donations every day to treat patients in need for people to give blood.\n\nEach year we need approximately 200000 new donors, as some donors can no longer give blood.Most people between ages of 17-65 are able to give blood. Around half our current donors are over 45.That is why we need more young people to start giving blood.</string>
    <string name="aboutus">This is a demo Application on blood donation and collecting \n We tried to spread awareness to the people about Blood Donation and Its Importance through this little demo.

    </string>


</resources>
