<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="180dp"
            android:layout_height="134dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_marginBottom="5dp"
            android:src="@drawable/blood2" />

        <LinearLayout
           android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Name:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="52dp"
                android:id="@+id/input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/displayName"
                android:inputType="text"
                android:textColor="@color/primary_dark" />
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose Gender:"
               />
            <!--<RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/gender">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Other"/>
            </RadioGroup>-->

            <Spinner
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="76dp"
                android:entries="@array/gender">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blood Group:" />

            <Spinner
                android:layout_marginLeft="13dp"
                android:paddingLeft="85dp"
                android:id="@+id/inputBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:entries="@array/Blood_Group">

            </Spinner>
        </LinearLayout>

    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="3dp"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="fill_vertical"
            android:text="Contact No:" />


        <EditText
            android:id="@+id/inputMobile"
            android:layout_marginLeft="30dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:textColor="@color/primary_dark"/>
        <Button
            android:id="@+id/btn_otp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textSize="10dp"
            android:visibility="visible"
            android:background="@drawable/signin_btn"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:text="Send OTP"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_ver"/>

    </LinearLayout>

    <LinearLayout
        android:padding="3dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:" />
        <EditText

            android:id="@+id/inputAddress"
            android:layout_marginLeft="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userAddress"
            android:inputType="text"
            android:textColor="@color/primary_dark" />
    </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Division:" />

            <Spinner
                android:id="@+id/inputDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="42dp"
                android:layout_weight="1"
                android:entries="@array/division_list"></Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/primary_dark" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@color/primary_dark" />

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/primary_dark" />
        <CheckBox
            android:id="@+id/checkbox"
            android:text="Mark this to be a donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/signin_btn"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</ScrollView>